--- a/indoors.html
+++ b/indoors.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link href="./css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="./css/cottage-winter.css"/>
+	<link rel="stylesheet" href="./css/cottage-indoors.css"/>
 	<script src="./js/jquery.js"></script>
 	<script src="./js/bootstrap.min.js"></script>
 	<script src="./js/website.js"></script>
@@ -62,103 +62,112 @@
         <!-- /.container-fluid -->
     </nav>
 	</div>
-	
-	<!-- Projects Row -->
-        <div class="row">
-				<div class="col-md-1 col-sm-2 portfolio-item"></div>
-				<div class="col-md-5 col-sm-8 col-xs-12 portfolio-item">
-					<div class="box">
-						<a href="#">
-							<img class="img-responsive" src="img/winter/winter-tree.jpg" alt="">
-						</a>
-					</div>
-					<h3>
-						Ice Covered Tree
-					</h3>
-					<p>Christmas Ice Storm 2013</p>
-				</div>
-				<div class="col-sm-2 hidden-md" ></div>
-				
-				<div class="col-md-5 col-sm-12 col-xs-12 portfolio-item">
-					<div class="col-md-12 col-sm-6 col-xs-12 portfolio-item">
-						<div class="box">
-							<a href="#">
-								<img class="img-responsive" src="img/winter/winter-sunset4.jpg" alt="">
-							</a>
-						</div>
-						<h3>
-							Winter Sunset
-						</h3>
-					</div>
-					<div class="col-md-12 col-sm-6 col-xs-12 portfolio-item">
-						<div class="box">
-							<a href="#">
-								<img class="img-responsive" src="img/winter/winter-sunset2.jpg" alt="">
-							</a>
-						</div>
-						<h3>
-							Winter Sunset
-						</h3>
-					</div>
-				</div>
-				<div class="col-md-1 hidden-xs hidden-sm portfolio-item"></div>
-        </div>
-        <!-- /.row -->
 		
-			<!-- Projects Row -->
+		<!-- Projects Row -->
         <div class="row">
 			<div class="col-md-1 hidden-sm portfolio-item"></div>
             <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
 				<div class="box">
 					<a href="#">
-						<img class="img-responsive" src="img/winter/winter-backyard.jpg" alt="">
+						<img class="img-responsive" src="img/indoors/family-room1.jpg" alt="">
 					</a>
 				</div>
-				<h3>
-					Snowy Backyard
-				</h3>
-				<p>Christmas Ice Storm 2013</p>
-			</div>
+                <h3>
+                    Family Room
+                </h3>
+            </div>
 			<div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
 				<div class="box">
 					<a href="#">
-						<img class="img-responsive" src="img/winter/clean-up.jpg" alt="">
+						<img class="img-responsive" src="img/indoors/family-room2.jpg" alt="">
 					</a>
 				</div>
-				<h3>
-					Clean Up
-				</h3>
-				<p>Christmas Ice Storm 2013</p>
-			</div>
+                <h3>
+                    Family Room
+                </h3>
+            </div>
 			<div class="col-md-1 hidden-sm portfolio-item"></div>
         </div>
         <!-- /.row -->
 		
-			<!-- Projects Row -->
+		<!-- Projects Row -->
         <div class="row">
 			<div class="col-md-1 hidden-sm portfolio-item"></div>
             <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
 				<div class="box">
 					<a href="#">
-						<img class="img-responsive" src="img/winter/winter-backyard2.jpg" alt="">
+						<img class="img-responsive" src="img/indoors/living-room1.jpg" alt="">
 					</a>
 				</div>
-				<h3>
-					Snowy Backyard
-				</h3>
-				<p>Christmas Ice Storm 2013</p>
-			</div>
-			<div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+                <h3>
+                    Living Room
+                </h3>
+            </div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
 				<div class="box">
 					<a href="#">
-						<img class="img-responsive" src="img/winter/winter-frontyard.jpg" alt="">
+						<img class="img-responsive" src="img/indoors/living-room2.jpg" alt="">
 					</a>
 				</div>
+                <h3>
+                    Living Room
+                </h3>
+            </div>
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+        </div>
+        <!-- /.row -->
+		
+		<!-- Projects Row -->
+        <div class="row">
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/indoors/kitchen.jpg" alt="">
+					</a>
+				</div>	
 				<h3>
-					Snowy Front yard
+					Kitchen
 				</h3>
-				<p>Christmas Ice Storm 2013</p>
-			</div>
+
+            </div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/indoors/master-bedroom.jpg" alt="">
+					</a>
+				</div>
+                <h3>
+                    Master Bedroom
+                </h3>
+            </div>
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+        </div>
+        <!-- /.row -->
+		
+		<!-- Projects Row -->
+        <div class="row">
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/indoors/erins-room.jpg" alt="">
+					</a>
+				</div>	
+                <h3>
+                    Guest Bedroom
+                </h3>
+            </div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/indoors/kristens-room.jpg" alt="">
+					</a>
+				</div>
+                <h3>
+                    Guest Bedroom
+                </h3>
+            </div>
 			<div class="col-md-1 hidden-sm portfolio-item"></div>
         </div>
         <!-- /.row -->
@@ -170,5 +179,6 @@
 			</div>
 		</div>
 	</footer>
+	
 </body>
 </html>
