--- a/fall.html
+++ b/fall.html
@@ -13,97 +13,130 @@
 	<link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
 </head>
 <body id="page-top" class="index">
-	<div class="name"><p>Johnston Family Cottage</p></div>
-	<div class="address-bar"><p>123 address street</p></div>
+	<div class="col-sm-12 hidden-xs top-banner">
+		<img class="banner img-full" src="img/frontPage/johnston-banner.png" alt="">
+	</div>
 	<!-- https://github.com/IronSummitMedia/startbootstrap-agency -->
+	<div class="col-xs-12 nav-container">
 	<nav class="navbar navbar-default">
 		<div class="my-container">
 			<div class="navbar-header page-scroll">
 				<button type"button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<a class="navbar-brand page-scroll" href="#page-top">Johnston Family Cottage</a>
-			</div>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Johnston Family Cottage</a>
+            </div>
 			
 			
-			<!-- Collect the nav links, forms, and other content for toggling -->
-			<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-				<ul class="nav navbar-nav ">
-					<li class="hidden">
-						<a href="#page-top"></a>
-					</li>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav ">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
 					<li class="page-scroll">
-						<a href="index.html">HOME</a>
-					</li>
+							<a href="index.html">HOME</a>
+						</li>
 					<li class="page-scroll">
 						<a href="summer.html">SUMMER</a>
-					</li>
-					<li class="page-scroll" >
+                    </li>
+                    <li class="page-scroll" >
 						<a href="fall.html">FALL</a>
-					</li>
-					<li class="page-scroll" >
+                    </li>
+                    <li class="page-scroll" >
 						<a href="winter.html">WINTER</a>
-					</li>
+                    </li>
 					<li class="page-scroll" >
 						<a href="spring.html">SPRING</a>
-					</li>
-				</ul>
-			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container-fluid -->
-	</nav>
+                    </li>
+					<li class="page-scroll" >
+						<a href="indoors.html">INDOORS</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+	</div>
 		
 			<!-- Projects Row -->
         <div class="row">
-			<div class="col-md-1 portfolio-item"></div>
-            <div class="col-md-5 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
-                <h3>
-                    Photo One
-                </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur .</p>
-            </div>
-            <div class="col-md-5 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="img/winter/winter-sunset1.jpg" alt="">
-                </a>
-                <h3>
-                    Photo Two
-                </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur .</p>
-            </div>
-			<div class="col-md-1 portfolio-item"></div>
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/fall/fall-water.jpg" alt="">
+					</a>
+				</div>
+			<h3>
+				Morning Coffee
+			</h3>
+			<p>Daryl enjoys the view on this fall day</p>
+
+			</div>
+			<div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/fall/backyard-tree2.jpg" alt="">
+					</a>
+				</div>
+				<h3>
+					Backyard
+				</h3>
+				<p>The leaves are beginning to fall</p>
+			</div>	
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
         </div>
         <!-- /.row -->
 		
 				<!-- Projects Row -->
         <div class="row">
-			<div class="col-md-1 portfolio-item"></div>
-            <div class="col-md-5 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/fall/dock.jpg" alt="">
+					</a>
+				</div>
+				<h3>
+					New Dock
+				</h3>
+			</div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/fall/fall-dock.jpg" alt="">
+					</a>
+				</div>
                 <h3>
-                    Photo One
+                    Dock Lifted for the Season
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur .</p>
             </div>
-            <div class="col-md-5 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="http://placehold.it/700x400" alt="">
-                </a>
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+        </div>
+        <!-- /.row -->	
+		
+				<!-- Projects Row -->
+        <div class="row">
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/fall/fall-dinner-set.jpg" alt="">
+					</a>
+				</div>
                 <h3>
-                    Photo Two
+                    Outdoor Dinning 
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur .</p>
+                <p>Fall 2014</p>
             </div>
-			<div class="col-md-1 portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+			</div>
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
         </div>
         <!-- /.row -->	
 		
