--- a/index.html
+++ b/index.html
@@ -13,11 +13,13 @@
 </head>
 
 <body id="page-top" class="index">
-	<div class="name"><p>Johnston Family Cottage</p></div>
-	<div class="address-bar"><p>123 address street</p></div>
+	<div class="col-sm-12 hidden-xs top-banner">
+		<img class="banner img-full" src="img/frontPage/johnston-banner.png" alt="">
+	</div>
 <!-- https://github.com/IronSummitMedia/startbootstrap-agency -->
-<nav class="navbar navbar-default">
-	<div class="my-container">
+	<div class="col-xs-12 nav-container">
+	<nav class="navbar navbar-default">
+		<div class="my-container">
 			<div class="navbar-header page-scroll">
 				<button type"button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
@@ -50,13 +52,17 @@
 					<li class="page-scroll" >
 						<a href="spring.html">SPRING</a>
                     </li>
+					<li class="page-scroll" >
+						<a href="indoors.html">INDOORS</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
         </div>
         <!-- /.container-fluid -->
     </nav>
-
+	</div>
+	
 	<header>
 		<div class="container">
 			<div class="row">
@@ -68,10 +74,14 @@
 								<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
 								<li data-target="#carousel-example-generic" data-slide-to="1"></li>
 								<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+								<li data-target="#carousel-example-generic" data-slide-to="3"></li>
 							</ol>
 
 							<!-- Wrapper for slides -->
 							<div class="carousel-inner">
+								<div class="item">
+									<img class="img-responsive img-full" src="img/frontPage/cottage-front.jpg" alt="">
+								</div>							
 								<div class="item active">
 									<img class="img-responsive img-full" src="img/frontPage/summer-sunset.jpg" alt="">
 								</div>
@@ -79,7 +89,7 @@
 									<img class="img-responsive img-full" src="img/frontPage/lake.jpg" alt="">
 								</div>
 								<div class="item">
-									<img class="img-responsive img-full" src="img/frontPage/sunset-winter.jpg" alt="">
+									<img class="img-responsive img-full" src="img/frontPage/cottage-backview.jpg" alt="">
 								</div>
 							</div>
 
