--- a/summer.html
+++ b/summer.html
@@ -13,88 +13,128 @@
 	<link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css">
 </head>
 <body id="page-top" class="index">
-	<div class="name"><p>Johnston Family Cottage</p></div>
-	<div class="address-bar"><p>123 address street</p></div>
+	<div class="col-sm-12 hidden-xs top-banner">
+		<img class="banner img-full" src="img/frontPage/johnston-banner.png" alt="">
+	</div>
 	<!-- https://github.com/IronSummitMedia/startbootstrap-agency -->
+	<div class="col-xs-12 nav-container">
 	<nav class="navbar navbar-default">
 		<div class="my-container">
-				<div class="navbar-header page-scroll">
-					<button type"button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand page-scroll" href="#page-top">Johnston Family Cottage</a>
-				</div>
-				
-				
-				<!-- Collect the nav links, forms, and other content for toggling -->
-				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-					<ul class="nav navbar-nav ">
-						<li class="hidden">
-							<a href="#page-top"></a>
-						</li>
-						<li class="page-scroll">
+			<div class="navbar-header page-scroll">
+				<button type"button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Johnston Family Cottage</a>
+            </div>
+			
+			
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav ">
+                    <li class="hidden">
+                        <a href="#page-top"></a>
+                    </li>
+					<li class="page-scroll">
 							<a href="index.html">HOME</a>
 						</li>
-						<li class="page-scroll">
-							<a href="summer.html">SUMMER</a>
-						</li>
-						<li class="page-scroll" >
-							<a href="fall.html">FALL</a>
-						</li>
-						<li class="page-scroll" >
-							<a href="winter.html">WINTER</a>
-						</li>
-						<li class="page-scroll" >
-							<a href="spring.html">SPRING</a>
-						</li>
-					</ul>
-				</div>
-				<!-- /.navbar-collapse -->
-			</div>
-			<!-- /.container-fluid -->
-		</nav>
+					<li class="page-scroll">
+						<a href="summer.html">SUMMER</a>
+                    </li>
+                    <li class="page-scroll" >
+						<a href="fall.html">FALL</a>
+                    </li>
+                    <li class="page-scroll" >
+						<a href="winter.html">WINTER</a>
+                    </li>
+					<li class="page-scroll" >
+						<a href="spring.html">SPRING</a>
+                    </li>
+					<li class="page-scroll" >
+						<a href="indoors.html">INDOORS</a>
+                    </li>
+                </ul>
+            </div>
+            <!-- /.navbar-collapse -->
+        </div>
+        <!-- /.container-fluid -->
+    </nav>
+	</div>
 		
 		<!-- Projects Row -->
         <div class="row">
-			<div class="col-md-2 portfolio-item"></div>
-            <div class="col-md-8 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="img/summer/summer-water.jpg" alt="">
-                </a>
+			<div class="col-sm-1 col-md-2 hidden-xs portfolio-item"></div>
+            <div class="col-xs-12 col-sm-10 col-md-8 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/summer/summer-water.jpg" alt="">
+					</a>
+				</div>
                 <h3>
-                    Photo One
+                    Summer at Sheba's Island
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur .</p>
             </div>
-			<div class="col-md-2 portfolio-item"></div>
+			<div class="col-sm-1 col-md-2 hidden-xs portfolio-item"></div>
         </div>
         <!-- /.row -->
 		
-				<!-- Projects Row -->
+		<!-- Projects Row -->
         <div class="row">
-			<div class="col-md-1 portfolio-item"></div>
-            <div class="col-md-5 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="img/summer/summer-boat.jpg" alt="">
-                </a>
+			<div class="col-md-1 hidden-sm hidden-xs portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/summer/summer-boat.jpg" alt="">
+					</a>
+				</div>
                 <h3>
-                    Photo One
+                    Boat at the Cottage
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur .</p>
+                <p>Summer 2014</p>
             </div>
-            <div class="col-md-5 portfolio-item">
-                <a href="#">
-                    <img class="img-responsive" src="img/summer/summer-boat2.jpg" alt="">
-                </a>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/summer/summer-boat2.jpg" alt="">
+					</a>
+				</div>
                 <h3>
-                    Photo Two
+                    New Boat
                 </h3>
-                <p>Lorem ipsum dolor sit amet, consectetur .</p>
+                <p>Summer 2014</p>
             </div>
-			<div class="col-md-1 portfolio-item"></div>
+			<div class="col-md-1 hidden-sm hidden-xs portfolio-item"></div>
+        </div>
+        <!-- /.row -->
+		
+		<!-- Projects Row -->
+        <div class="row">
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/summer/summer-boatParents.jpg" alt="">
+					</a>
+				</div>
+                <h3>
+                    Jill and Daryl Enjoying the Boat
+                </h3>
+                <p>Summer 2014</p>
+            </div>
+            <div class="col-sm-6 col-md-5 col-xs-12 portfolio-item">
+				<div class="box">
+					<a href="#">
+						<img class="img-responsive" src="img/summer/summer-backHouse.jpg" alt="">
+					</a>
+				</div>
+                <h3>
+                    Cottage from the Water
+                </h3>
+                <p>Summer 2014</p>
+            </div>
+			<div class="col-md-1 hidden-sm portfolio-item"></div>
         </div>
         <!-- /.row -->
 		
