--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Erin Gallagher</title>
+<title>CasaSheba</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -13,108 +13,109 @@
 </head>
 
 <body id="page-top" class="index">
-	<div class="col-sm-12 hidden-xs top-banner">
-		<img class="banner img-full" src="img/frontPage/johnston-banner.png" alt="">
-	</div>
-<!-- https://github.com/IronSummitMedia/startbootstrap-agency -->
-	<div class="col-xs-12 nav-container">
-	<nav class="navbar navbar-default">
-		<div class="my-container">
-			<div class="navbar-header page-scroll">
-				<button type"button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Johnston Family Cottage</a>
-            </div>
-			
-			
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav ">
-                    <li class="hidden">
-                        <a href="#page-top"></a>
-                    </li>
-					<li class="page-scroll">
-							<a href="index.html">HOME</a>
+	<div id="wrapper" >
+		<div class="col-sm-12 hidden-xs top-banner">
+			<img class="banner img-full" src="img/frontPage/johnston-banner.png" alt="">
+		</div>
+	<!-- https://github.com/IronSummitMedia/startbootstrap-agency -->
+		<div class="col-xs-12 nav-container">
+		<nav class="navbar navbar-default">
+			<div class="my-container">
+				<div class="navbar-header page-scroll">
+					<button type"button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand page-scroll" href="#page-top">Johnston Family Cottage</a>
+				</div>
+				
+				
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav ">
+						<li class="hidden">
+							<a href="#page-top"></a>
 						</li>
-					<li class="page-scroll">
-						<a href="summer.html">SUMMER</a>
-                    </li>
-                    <li class="page-scroll" >
-						<a href="fall.html">FALL</a>
-                    </li>
-                    <li class="page-scroll" >
-						<a href="winter.html">WINTER</a>
-                    </li>
-					<li class="page-scroll" >
-						<a href="spring.html">SPRING</a>
-                    </li>
-					<li class="page-scroll" >
-						<a href="indoors.html">INDOORS</a>
-                    </li>
-                </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
-    </nav>
-	</div>
-	
-	<header>
-		<div class="container">
-			<div class="row">
-				<div class="box">
-					<div class="col-lg-12 text-center">
-						<div id="carousel-example-generic" class="carousel slide">
-							<!-- Indicators -->
-							<ol class="carousel-indicators hidden-xs">
-								<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-								<li data-target="#carousel-example-generic" data-slide-to="1"></li>
-								<li data-target="#carousel-example-generic" data-slide-to="2"></li>
-								<li data-target="#carousel-example-generic" data-slide-to="3"></li>
-							</ol>
+						<li class="page-scroll">
+								<a href="index.html">HOME</a>
+							</li>
+						<li class="page-scroll">
+							<a href="summer.html">SUMMER</a>
+						</li>
+						<li class="page-scroll" >
+							<a href="fall.html">FALL</a>
+						</li>
+						<li class="page-scroll" >
+							<a href="winter.html">WINTER</a>
+						</li>
+						<li class="page-scroll" >
+							<a href="spring.html">SPRING</a>
+						</li>
+						<li class="page-scroll" >
+							<a href="indoors.html">INDOORS</a>
+						</li>
+					</ul>
+				</div>
+				<!-- /.navbar-collapse -->
+			</div>
+			<!-- /.container-fluid -->
+		</nav>
+		</div>
+		
+		<header>
+			<div class="container">
+				<div class="row">
+					<div class="box col-xs-12">
+						<div class="col-xs-12 text-center">
+							<div id="carousel-example-generic" class="carousel slide">
+								<!-- Indicators -->
+								<ol class="carousel-indicators hidden-xs">
+									<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="1"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="2"></li>
+									<li data-target="#carousel-example-generic" data-slide-to="3"></li>
+								</ol>
 
-							<!-- Wrapper for slides -->
-							<div class="carousel-inner">
-								<div class="item">
-									<img class="img-responsive img-full" src="img/frontPage/cottage-front.jpg" alt="">
-								</div>							
-								<div class="item active">
-									<img class="img-responsive img-full" src="img/frontPage/summer-sunset.jpg" alt="">
+								<!-- Wrapper for slides -->
+								<div class="carousel-inner">
+									<div class="item">
+										<img class="img-responsive img-full" src="img/frontPage/cottage-front.jpg" alt="">
+									</div>							
+									<div class="item active">
+										<img class="img-responsive img-full" src="img/frontPage/summer-sunset.jpg" alt="">
+									</div>
+									<div class="item">
+										<img class="img-responsive img-full" src="img/frontPage/lake.jpg" alt="">
+									</div>
+									<div class="item">
+										<img class="img-responsive img-full" src="img/frontPage/cottage-backview.jpg" alt="">
+									</div>
 								</div>
-								<div class="item">
-									<img class="img-responsive img-full" src="img/frontPage/lake.jpg" alt="">
-								</div>
-								<div class="item">
-									<img class="img-responsive img-full" src="img/frontPage/cottage-backview.jpg" alt="">
-								</div>
+
+								<!-- Controls -->
+								<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+									<span class="icon-prev"></span>
+								</a>
+								<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+									<span class="icon-next"></span>
+								</a>
 							</div>
-
-							<!-- Controls -->
-							<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-								<span class="icon-prev"></span>
-							</a>
-							<a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
-								<span class="icon-next"></span>
-							</a>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>
-	</header>
+		</header>
 
 
-	<footer class="text-center">
-		<div class="container-footer">
-			<div class="col-lg-12">
-				&copy; 2014 Erin Gallagher. All Rights Reserved.
+		<footer class="text-center">
+			<div class="container-footer">
+				<div class="col-lg-12">
+					&copy; 2014 Erin Gallagher. All Rights Reserved.
+				</div>
 			</div>
-		</div>
-	</footer>
-	
+		</footer>
+	</div>
 </body>
 </html>
