--- a/spring.html
+++ b/spring.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Erin Gallagher</title>
+<title>CasaSheba</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link href="./css/bootstrap.min.css" rel="stylesheet">
@@ -84,7 +84,7 @@
 					</a>
 				</div>
                 <h3>
-                    Sunset
+                    Sunrise
                 </h3>
                 <p>Spring 2014</p>
             </div>
